--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<h2>Software</h2>
 		
 		<h3>Delete Files Automator Action</h3>
+			<p>
+				<img src="images/dfaa_header.png" align="middle"/>
+			</p>
 
 			<p>
 				Apple's <a href="http://www.apple.com/osx/apps/all.html#automator">Automator</a> is a handy application for basic OSX
@@ -56,7 +59,9 @@
 			</p>
 		
 		<h3><a href="https://github.com/jrmiddle/JMPrevNextAccessoryView">JMPrevNextAccessoryView</a></h3>
-
+			<p>
+				<img src="images/pnav_header.png" align="middle"/>
+			</p>
 			<p>
 				<a href="https://github.com/jrmiddle/JMPrevNextAccessoryView">JMPrevNextAccessoryView</a> is a simple inputAccessoryView
 				for UITextFields and UITextViews which provides serial navigation functionality similar to that which Safari provides when
